# shortlist

./: .gitignore  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: deploy.yml
backend/: Dockerfile  cv.txt  main.py  pyproject.toml  test.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
