[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autopep8>=2.3.2",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "load-dotenv>=0.1.0",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
